--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div id="header">
                 <div id="logo">
                 <a href="#">
-                    <h1><img src="/logo.jpg" alt=""></h1>
+                    <h1><img src="logo.jpg" alt=""></h1>
                 </a>
                 </div>
             </div>
@@ -26,49 +26,49 @@
                     <ul class="clearfix">
                         <li>
                             <a href="usa.html">
-                                <img src="/poster/usa.jpg" alt="" />
+                                <img src="poster/usa.jpg" alt="" />
                                 <h2>United State</h2>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="/poster/ex_poster.jpg" alt="" />
+                                <img src="poster/ex_poster.jpg" alt="" />
                                 <h2>Country Name</h2>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="/poster/ex_poster.jpg" alt="" />
+                                <img src="poster/ex_poster.jpg" alt="" />
                                 <h2>Country Name</h2>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="/poster/ex_poster.jpg" alt="" />
+                                <img src="poster/ex_poster.jpg" alt="" />
                                 <h2>Country Name</h2>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="/poster/ex_poster.jpg" alt="" />
+                                <img src="poster/ex_poster.jpg" alt="" />
                                 <h2>Country Name</h2>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="/poster/ex_poster.jpg" alt="" />
+                                <img src="poster/ex_poster.jpg" alt="" />
                                 <h2>Country Name</h2>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="/poster/ex_poster.jpg" alt="" />
+                                <img src="poster/ex_poster.jpg" alt="" />
                                 <h2>Country Name</h2>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="/poster/ex_poster.jpg" alt="" />
+                                <img src="poster/ex_poster.jpg" alt="" />
                                 <h2>Country Name</h2>
                             </a>
                         </li>
