--- a/usa.html
+++ b/usa.html
@@ -44,26 +44,26 @@
                 </div>
                 <ul class="clearfix">
                     <li>
-                        <a href="/usa_landmark/liberty.html">
-                        <img src="/usa_landmark/picture/1.jpeg">
+                        <a href="usa_landmark/liberty.html">
+                        <img src="usa_landmark/picture/1.jpeg">
                         <h3>Statue of Liberty</h3>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                        <img src="/usa_landmark/picture/ex.jpg">
+                        <img src="usa_landmark/picture/ex.jpg">
                         <h3>Landmark name</h3>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                        <img src="/usa_landmark/picture/ex.jpg">
+                        <img src="usa_landmark/picture/ex.jpg">
                         <h3>Landmark name</h3>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                        <img src="/usa_landmark/picture/ex.jpg">
+                        <img src="usa_landmark/picture/ex.jpg">
                         <h3>Landmark name</h3>
                         </a>
                     </li>
