--- a/korea.html
+++ b/korea.html
@@ -14,7 +14,7 @@
         <!-- header -->
          <div id="header">
             <div id="title">
-                <h1>United States</h1>
+                <h1>South Korea</h1>
             </div>
         </div>
         <!-- header -->
@@ -24,12 +24,12 @@
             <div class="con_2">
                 <ul class="clearfix">
                     <li>
-                        <img src="poster/usa.jpg" alt="" />
+                        <img src="poster/korea.jpg" alt="" />
                     </li>
                      
                     <li>
                         <p class="explain_box">
-                            The United States of America (USA), commonly known as the United States (U.S. or US) or America, is a country primarily located in North America. It consists of 50 states, a federal district, five major self-governing territories, 326 Indian reservations, and some minor possessions.[h] At 3.8 million square miles (9.8 million square kilometers), it is the world's third- or fourth-largest country by total area. With a population of more than 328 million people, it is the third most populous country in the world. The national capital is Washington, D.C., and the most populous city is New York City.
+                            South Korea, officially the Republic of Korea, is a country in East Asia, constituting the southern part of the Korean Peninsula, and sharing a land border with North Korea. 25 million people, around half of the country's population of more than 51 million people, live in the Seoul Capital Area, the fifth-largest metropolitan area in the world.
                         </p>
                     </li>
                 </ul>
@@ -45,27 +45,27 @@
                 </div>
                 <ul class="clearfix">
                     <li>
-                        <a href="usa_landmark/liberty.html">
-                        <img src="usa_landmark/picture/1.jpeg">
-                        <h3>Statue of Liberty</h3>
+                        <a href="korea_landmark/gm.html">
+                        <img src="korea_landmark/1.jpg">
+                        <h3>Gwanghwamun</h3>
                         </a>
                     </li>
                     <li>
-                        <a href="usa_landmark/ggb.html">
-                        <img src="usa_landmark/picture/2.jpg">
-                        <h3>Golden Gate Bridge</h3>
+                        <a href="korea_landmark/nt.html">
+                        <img src="korea_landmark/2.jpg">
+                        <h3>N Seoul Tower</h3>
                         </a>
                     </li>
                     <li>
-                        <a href="usa_landmark/lm.html">
-                        <img src="usa_landmark/picture/3.jpeg">
-                        <h3>Lincoln Memorial</h3>
+                        <a href="korea_landmark/gb.html">
+                        <img src="korea_landmark/3.jpeg">
+                        <h3>Gwangan Bridge</h3>
                         </a>
                     </li>
                     <li>
-                        <a href="usa_landmark/hollywood.html">
-                        <img src="usa_landmark/picture/4.jpg">
-                        <h3>Hollywood Sign</h3>
+                        <a href="#">
+                        <img src="">
+                        <h3>Name</h3>
                         </a>
                     </li>
                 </ul>
