--- a/home2.html
+++ b/home2.html
@@ -11,6 +11,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
     
+    
 </head>
 <body>
 
@@ -36,51 +37,43 @@
                     <h3>Travel List</h3>
                     <ul class="clearfix">
                         <li>
-                            <a href="usa.html">
-                                <img src="poster/usa2.jpg" alt="" />
-                                <h2>United States</h2>
-                            </a>
-                        </li>
-                        <li>
                             <a href="korea.html">
-                                <img src="poster/korea.jpg" alt="" />
-                                <h2>South Korea</h2>
+                                <span></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="usa.html">
+                                <span></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="japan.html">
+                                <span></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="uk.html">
+                                <span></span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="poster/japan.jpg" alt="" />
-                                <h2>Japan</h2>
+                                <span></span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="poster/uk.jpg" alt="" />
-                                <h2>United Kingdom</h2>
+                                <span></span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="poster/france.jpg" alt="" />
-                                <h2>France</h2>
+                                <span></span>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <img src="poster/italy.jpg" alt="" />
-                                <h2>Italy</h2>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="poster/swiss.jpg" alt="" />
-                                <h2>Swiss</h2>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <img src="poster/egypt.jpg" alt="" />
-                                <h2>Egypt</h2>
+                                <span></span>
                             </a>
                         </li>
                     </ul>
