--- a/korea_landmark/si.html
+++ b/korea_landmark/si.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../logo.png" rel="icon" />
-    <title>Gwangan Bridge</title>
+    <title>Seongsan Ilchulbong</title>
     <link href="../css/layout.css" rel="stylesheet" type="text/css" />
 
 
@@ -86,17 +86,16 @@
     <div>
         <div id="back"><a href="../korea.html"><img src="../arrow.png" alt="" /></a></div>
         <div id="landmark_name">
-            <h1>Gwangan Bridge</h1>
+            <h1>Seongsan Ilchulbong</h1>
         </div>
     </div>
 
 <div id="aside_wrap">
         <aside >
             <ul>
-                <li><p>Gwangan Bridge</p></li>
-                <li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3262.358531432637!2d129.1278430508525!3d35.14767816655877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3568ed398bb5ba9b%3A0x6729727408f74eb0!2sGwangan%20Bridge!5e0!3m2!1sen!2skr!4v1618859560939!5m2!1sen!2skr" width="280" height="280" style="border:0;" allowfullscreen="" loading="lazy"></iframe></li>
-                <li><span>The Gwangan Bridge or Diamond Bridge is a suspensionf bridge located in Busan, South Korea. It connects Haeundae-gu to Suyeong-gu. The road surface is about 6,500 meters long, with the bridge as a whole spanning 7,420 meters. It is the second longest bridge in the country after the Incheon Bridge.
-                            Construction began in 1994 and concluded in December 2002, with a total cost of 789.9 billion won. The bridge opened temporarily in September and October 2002 for the 2002 Asian Games. However, it was not officially opened until January, 2003.
+                <li><p>Seongsan Ilchulbong</p></li>
+                <li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13314.653896432594!2d126.93372377674127!3d33.45807309281878!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x350d14b9f6e3789f%3A0x555132053a23b64b!2sSeongsan%20Ilchulbong!5e0!3m2!1sen!2skr!4v1618858697535!5m2!1sen!2skr" width="280" height="280" style="border:0;" allowfullscreen="" loading="lazy"></iframe></li>
+                <li><span>Seongsan Ilchulbong, also called ‘Sunrise Peak’, is an archetypal tuff cone formed by hydrovolcanic eruptions upon a shallow seabed about 5 thousand years ago. Situated on the eastern seaboard of Jeju Island and said to resemble a gigantic ancient castle, this tuff cone is 182 meters high, has a preserved bowl-like crater and also displays diverse inner structures resulting from the sea cliff. These features are considered to be of geologic worth, providing information on eruptive and depositional processes of hydromagmatic volcanoes worldwide as well as past volcanic activity of Seongsan Ilchulbong itself.
                 </span></li>
             </ul>
         </aside>
@@ -104,8 +103,7 @@
         <button></button>
 </div>
 </div>
-<iframe src="https://www.google.com/maps/embed?pb=!4v1617040560772!6m8!1m7!1sCAoSLEFGMVFpcE55dkp5VnkxZVhCZ2pUOEtHN3ZkeWFLX3FqQm9JNV9qdzJaUGpr!2m2!1d35.1528028!2d129.1283445!3f346.36347684708704!4f2.270079147204541!5f0.7820865974627469" width="1035" height="735" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!4v1618858415157!6m8!1m7!1sCAoSLEFGMVFpcE9FbUo5NnBJZ2l5OUxwYWZvaml1U1AySGdsdWJFNzFXeW11Tzla!2m2!1d33.460228!2d126.9347534!3f252.57489724294317!4f-4.046538963397879!5f0.7820865974627469" width="1035" height="735" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 </div>
 </body>
 </html>
-
