--- a/uk_landmark/tb.html
+++ b/uk_landmark/tb.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../logo.png" rel="icon" />
-    <title>Gwangan Bridge</title>
+    <title>Tower Bridge</title>
     <link href="../css/layout.css" rel="stylesheet" type="text/css" />
-
 
     <style>
         *{margin:0; padding:0;}
@@ -81,31 +80,31 @@
     </script>
 </head>
 <body>
-<div id="wrap">
-    <div id="map_wrap">
-    <div>
-        <div id="back"><a href="../korea.html"><img src="../arrow.png" alt="" /></a></div>
-        <div id="landmark_name">
-            <h1>Gwangan Bridge</h1>
+    <body>
+        <div id="wrap">
+            <div id="map_wrap">
+            <div>
+                <div id="back"><a href="../uk.html"><img src="../arrow.png" alt="" /></a></div>
+                <div id="landmark_name">
+                    <h1>Tower Bridge</h1>
+                </div>
+            </div>
+
+        <div id="aside_wrap">
+            <aside >
+                <ul>
+                    <li><p>Tower Bridge</p></li>
+                    <li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2483.4229316965316!2d-0.07535649999999999!3d51.5054564!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487603438b65db49%3A0x9e78421a085a6f2d!2sTower%20Bridge!5e0!3m2!1sen!2skr!4v1618862588435!5m2!1sen!2skr" width="280" height="280" style="border:0;" allowfullscreen="" loading="lazy"></iframe></li>
+                    <li><span>Tower Bridge is a combined bascule and suspension bridge in London, built between 1886 and 1894. The bridge crosses the River Thames close to the Tower of London and has become a world-famous symbol of London. As a result, it is sometimes confused with London Bridge, about 0.5 miles (0.80 km) upstream. Tower Bridge is one of five London bridges owned and maintained by the Bridge House Estates, a charitable trust overseen by the City of London Corporation. It is the only one of the trust's bridges not to connect the City of London directly to the Southwark bank, as its northern landfall is in Tower Hamlets.
+                    </span></li>
+                </ul>
+            </aside>
+
+            <button></button>
         </div>
-    </div>
-
-<div id="aside_wrap">
-        <aside >
-            <ul>
-                <li><p>Gwangan Bridge</p></li>
-                <li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3262.358531432637!2d129.1278430508525!3d35.14767816655877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3568ed398bb5ba9b%3A0x6729727408f74eb0!2sGwangan%20Bridge!5e0!3m2!1sen!2skr!4v1618859560939!5m2!1sen!2skr" width="280" height="280" style="border:0;" allowfullscreen="" loading="lazy"></iframe></li>
-                <li><span>The Gwangan Bridge or Diamond Bridge is a suspensionf bridge located in Busan, South Korea. It connects Haeundae-gu to Suyeong-gu. The road surface is about 6,500 meters long, with the bridge as a whole spanning 7,420 meters. It is the second longest bridge in the country after the Incheon Bridge.
-                            Construction began in 1994 and concluded in December 2002, with a total cost of 789.9 billion won. The bridge opened temporarily in September and October 2002 for the 2002 Asian Games. However, it was not officially opened until January, 2003.
-                </span></li>
-            </ul>
-        </aside>
-
-        <button></button>
-</div>
-</div>
-<iframe src="https://www.google.com/maps/embed?pb=!4v1617040560772!6m8!1m7!1sCAoSLEFGMVFpcE55dkp5VnkxZVhCZ2pUOEtHN3ZkeWFLX3FqQm9JNV9qdzJaUGpr!2m2!1d35.1528028!2d129.1283445!3f346.36347684708704!4f2.270079147204541!5f0.7820865974627469" width="1035" height="735" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-</div>
+        </div>
+        
+        <iframe src="https://www.google.com/maps/embed?pb=!4v1618862564253!6m8!1m7!1sCAoSLEFGMVFpcE8xbEs0dFExU3p5Y0c2bTlFcURBamVkeEtRMVllNWNBWmdzMVJI!2m2!1d51.5054564!2d-0.07535649999999999!3f0.13514854758705042!4f15.704337903448334!5f0.7820865974627469" width="1035" height="735" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
 </body>
 </html>
-
