--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             }
         }
     </style>
-<meta http-equiv="refresh" content="3; url=home.html">
+<meta http-equiv="refresh" content="3; url=home2.html">
 </script>
     <title>Loading</title>
 
