--- a/japan.html
+++ b/japan.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="logo.png" rel="icon" />
-    <title>United States of America</title>
+    <title>Japan</title>
     <link href="css/layout.css" rel="stylesheet" type="text/css" />
     
 </head>
@@ -16,7 +16,7 @@
          <div id="header">
             <div id="back"><a href="home2.html"><img src="arrow.png" alt="" /></a></div>
             <div id="title">
-                <h1>United States of America</h1>
+                <h1>Japan</h1>
             </div>
         </div>
         <!-- header -->
@@ -26,12 +26,12 @@
             <div class="con_2">
                 <ul class="clearfix">
                     <li>
-                        <img src="flag/usa.svg" alt="" />
+                        <img src="flag/japan.png" alt="" />
                     </li>
                      
                     <li>
                         <p class="explain_box">
-                            The United States of America (USA), commonly known as the United States (U.S. or US) or America, is a country primarily located in North America. It consists of 50 states, a federal district, five major self-governing territories, 326 Indian reservations, and some minor possessions. At 3.8 million square miles (9.8 million square kilometers), it is the world's third- or fourth-largest country by total area. With a population of more than 328 million people, it is the third most populous country in the world. The national capital is Washington, D.C., and the most populous city is New York City.
+                            Japan is an island country in East Asia, located in the northwest Pacific Ocean. It is bordered on the west by the Sea of Japan, and extends from the Sea of Okhotsk in the north toward the East China Sea and Taiwan in the south. Part of the Ring of Fire, Japan spans an archipelago of 6852 islands covering 377,975 square kilometers; the five main islands are Hokkaido, Honshu, Shikoku, Kyushu, and Okinawa. Tokyo is Japan's capital and largest city; other major cities include Yokohama, Osaka, Nagoya, Sapporo, Fukuoka, Kobe, and Kyoto.
                         </p>
                     </li>
                 </ul>
@@ -48,42 +48,42 @@
                 <ul class="clearfix">
                     <li>
                         <figure class="snip1361">
-                            <img src="usa_landmark/picture/1.jpeg" alt="" />
+                            <img src="japan_landmark/sen.jpeg" alt="" />
                             <figcaption>
-                              <h3>Statue of Liberty</h3>
+                              <h3>Senso-ji</h3>
                               <p>Click and go on a trip</p>
                             </figcaption>
-                            <a href="usa_landmark/liberty.html"></a>
+                            <a href="japan_landmark/sen.html"></a>
                           </figure>
                     </li>
                     <li>
                         <figure class="snip1361">
-                            <img src="usa_landmark/picture/2.jpg" alt="" />
+                            <img src="japan_landmark/hime.jpeg" alt="" />
                             <figcaption>
-                              <h3>Golden Gate Bridge</h3>
+                              <h3>Himeji Castle</h3>
                               <p>Click and go on a trip</p>
                             </figcaption>
-                            <a href="usa_landmark/ggb.html"></a>
+                            <a href="japan_landmark/hime.html"></a>
                           </figure>
                     </li>
                     <li>
                         <figure class="snip1361">
-                            <img src="usa_landmark/picture/3.jpeg" alt="" />
+                            <img src="japan_landmark/fit.jpeg" alt="" />
                             <figcaption>
-                              <h3>Licoln Memorial</h3>
+                              <h3>Fushimi Inari Taisha</h3>
                               <p>Click and go on a trip</p>
                             </figcaption>
-                            <a href="usa_landmark/lm.html"></a>
+                            <a href="japan_landmark/fit.html"></a>
                           </figure>
                     </li>
                     <li>
                         <figure class="snip1361">
-                            <img src="usa_landmark/picture/4.jpg" alt="" />
+                            <img src="japan_landmark/doton.jpeg" alt="" />
                             <figcaption>
-                              <h3>Hollywood Sign</h3>
+                              <h3>Dotonbori</h3>
                               <p>Click and go on a trip</p>
                             </figcaption>
-                            <a href="usa_landmark/hollywood.html"></a>
+                            <a href="japan_landmark/doton.html"></a>
                           </figure>
                     </li>
                 </ul>
