--- a/japan_landmark/doton.html
+++ b/japan_landmark/doton.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../logo.png" rel="icon" />
-    <title>Gwangan Bridge</title>
+    <title>Dotonbori</title>
     <link href="../css/layout.css" rel="stylesheet" type="text/css" />
 
 
@@ -84,19 +84,19 @@
 <div id="wrap">
     <div id="map_wrap">
     <div>
-        <div id="back"><a href="../korea.html"><img src="../arrow.png" alt="" /></a></div>
+        <div id="back"><a href="../japan.html"><img src="../arrow.png" alt="" /></a></div>
         <div id="landmark_name">
-            <h1>Gwangan Bridge</h1>
+            <h1>Dotonbori</h1>
         </div>
     </div>
 
 <div id="aside_wrap">
         <aside >
             <ul>
-                <li><p>Gwangan Bridge</p></li>
-                <li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3262.358531432637!2d129.1278430508525!3d35.14767816655877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3568ed398bb5ba9b%3A0x6729727408f74eb0!2sGwangan%20Bridge!5e0!3m2!1sen!2skr!4v1618859560939!5m2!1sen!2skr" width="280" height="280" style="border:0;" allowfullscreen="" loading="lazy"></iframe></li>
-                <li><span>The Gwangan Bridge or Diamond Bridge is a suspensionf bridge located in Busan, South Korea. It connects Haeundae-gu to Suyeong-gu. The road surface is about 6,500 meters long, with the bridge as a whole spanning 7,420 meters. It is the second longest bridge in the country after the Incheon Bridge.
-                            Construction began in 1994 and concluded in December 2002, with a total cost of 789.9 billion won. The bridge opened temporarily in September and October 2002 for the 2002 Asian Games. However, it was not officially opened until January, 2003.
+                <li><p>Dotonbori</p></li>
+                <li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6562.889465006544!2d135.5012953!3d34.6687235!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e713818af9fd%3A0xb8bb1326b48ba590!2sD%C5%8Dtonbori!5e0!3m2!1sen!2skr!4v1618862119795!5m2!1sen!2skr" width="280" height="280" style="border:0;" allowfullscreen="" loading="lazy"></iframe></li>
+                <li><span>Dotonbori or Dotombori is one of the principal tourist destinations in Osaka, Japan, running along the Dotonbori canal from Dotonboribashi Bridge to Nipponbashi Bridge in the Namba district of the city's Chuo ward. Historically a theater district, it is now a popular nightlife and entertainment area characterized by its eccentric atmosphere and large illuminated signboards.
+                    
                 </span></li>
             </ul>
         </aside>
@@ -104,8 +104,7 @@
         <button></button>
 </div>
 </div>
-<iframe src="https://www.google.com/maps/embed?pb=!4v1617040560772!6m8!1m7!1sCAoSLEFGMVFpcE55dkp5VnkxZVhCZ2pUOEtHN3ZkeWFLX3FqQm9JNV9qdzJaUGpr!2m2!1d35.1528028!2d129.1283445!3f346.36347684708704!4f2.270079147204541!5f0.7820865974627469" width="1035" height="735" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!4v1618861936382!6m8!1m7!1sCAoSLEFGMVFpcE50Y19qRk1sQl8wMVJVb2JybmhVUF9aYXU3aTl0bW81YURkcDBs!2m2!1d34.6687235!2d135.5012953!3f271.65479927838936!4f22.91512815709835!5f0.7820865974627469" width="1035" height="735" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 </div>
 </body>
 </html>
-
