--- a/japan_landmark/fit.html
+++ b/japan_landmark/fit.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../logo.png" rel="icon" />
-    <title>Gwangan Bridge</title>
+    <title>Fushimi Inari-taisha</title>
     <link href="../css/layout.css" rel="stylesheet" type="text/css" />
 
 
@@ -84,19 +84,20 @@
 <div id="wrap">
     <div id="map_wrap">
     <div>
-        <div id="back"><a href="../korea.html"><img src="../arrow.png" alt="" /></a></div>
+        <div id="back"><a href="../japan.html"><img src="../arrow.png" alt="" /></a></div>
         <div id="landmark_name">
-            <h1>Gwangan Bridge</h1>
+            <h1>Fushimi Inari-taisha</h1>
         </div>
     </div>
 
 <div id="aside_wrap">
         <aside >
             <ul>
-                <li><p>Gwangan Bridge</p></li>
-                <li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3262.358531432637!2d129.1278430508525!3d35.14767816655877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3568ed398bb5ba9b%3A0x6729727408f74eb0!2sGwangan%20Bridge!5e0!3m2!1sen!2skr!4v1618859560939!5m2!1sen!2skr" width="280" height="280" style="border:0;" allowfullscreen="" loading="lazy"></iframe></li>
-                <li><span>The Gwangan Bridge or Diamond Bridge is a suspensionf bridge located in Busan, South Korea. It connects Haeundae-gu to Suyeong-gu. The road surface is about 6,500 meters long, with the bridge as a whole spanning 7,420 meters. It is the second longest bridge in the country after the Incheon Bridge.
-                            Construction began in 1994 and concluded in December 2002, with a total cost of 789.9 billion won. The bridge opened temporarily in September and October 2002 for the 2002 Asian Games. However, it was not officially opened until January, 2003.
+                <li><p>Fushimi Inari-taisha</p></li>
+                <li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3269.579583134213!2d135.77047765084873!3d34.967144576312634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60010f153d2e6d21%3A0x7b1aca1c753ae2e9!2sFushimi%20Inari%20Taisha!5e0!3m2!1sen!2skr!4v1618861145151!5m2!1sen!2skr" width="280" height="280" style="border:0;" allowfullscreen="" loading="lazy"></iframe></li>
+                <li><span>Fushimi Inari-taisha is the head shrine of the kami Inari, located in Fushimi-ku, Kyoto, Kyoto Prefecture, Japan. The shrine sits at the base of a mountain also named Inari which is 233 metres (764 ft) above sea level, and includes trails up the mountain to many smaller shrines which span 4 kilometres (2.5 mi) and take approximately 2 hours to walk up.
+                            Inari was originally and remains primarily the kami of rice and agriculture, but merchants and manufacturers also worship Inari as the patron of business. Each of Fushimi Inari-taisha's roughly thousand torii was donated by a Japanese business.
+                    
                 </span></li>
             </ul>
         </aside>
@@ -104,8 +105,7 @@
         <button></button>
 </div>
 </div>
-<iframe src="https://www.google.com/maps/embed?pb=!4v1617040560772!6m8!1m7!1sCAoSLEFGMVFpcE55dkp5VnkxZVhCZ2pUOEtHN3ZkeWFLX3FqQm9JNV9qdzJaUGpr!2m2!1d35.1528028!2d129.1283445!3f346.36347684708704!4f2.270079147204541!5f0.7820865974627469" width="1035" height="735" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!4v1618861183890!6m8!1m7!1sCAoSLEFGMVFpcE15WEkzRXBLRkxlTUxtM0w4aEFvbGNzdE5tdlk3Z2xQaHN2WV9Q!2m2!1d34.9671402!2d135.7726717!3f2.412594622427344!4f-1.0467846082476342!5f0.7820865974627469" width="1035" height="735" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 </div>
 </body>
 </html>
-
