--- a/japan_landmark/hime.html
+++ b/japan_landmark/hime.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../logo.png" rel="icon" />
-    <title>Gwangan Bridge</title>
+    <title>Himeji Castle</title>
     <link href="../css/layout.css" rel="stylesheet" type="text/css" />
 
 
@@ -84,19 +84,18 @@
 <div id="wrap">
     <div id="map_wrap">
     <div>
-        <div id="back"><a href="../korea.html"><img src="../arrow.png" alt="" /></a></div>
+        <div id="back"><a href="../japan.html"><img src="../arrow.png" alt="" /></a></div>
         <div id="landmark_name">
-            <h1>Gwangan Bridge</h1>
+            <h1>Himeji Castle</h1>
         </div>
     </div>
 
 <div id="aside_wrap">
         <aside >
             <ul>
-                <li><p>Gwangan Bridge</p></li>
-                <li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3262.358531432637!2d129.1278430508525!3d35.14767816655877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3568ed398bb5ba9b%3A0x6729727408f74eb0!2sGwangan%20Bridge!5e0!3m2!1sen!2skr!4v1618859560939!5m2!1sen!2skr" width="280" height="280" style="border:0;" allowfullscreen="" loading="lazy"></iframe></li>
-                <li><span>The Gwangan Bridge or Diamond Bridge is a suspensionf bridge located in Busan, South Korea. It connects Haeundae-gu to Suyeong-gu. The road surface is about 6,500 meters long, with the bridge as a whole spanning 7,420 meters. It is the second longest bridge in the country after the Incheon Bridge.
-                            Construction began in 1994 and concluded in December 2002, with a total cost of 789.9 billion won. The bridge opened temporarily in September and October 2002 for the 2002 Asian Games. However, it was not officially opened until January, 2003.
+                <li><p>Himeji Castle</p></li>
+                <li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3274.667429112373!2d134.69171065084583!3d34.83945338318567!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3554e003a23324b3%3A0x7a4f8c2f6eba81b1!2sHimeji%20Castle!5e0!3m2!1sen!2skr!4v1618860708753!5m2!1sen!2skr" width="280" height="280" style="border:0;" allowfullscreen="" loading="lazy"></iframe></li>
+                <li><span>Himeji Castle is a hilltop Japanese castle complex situated in the city of Himeji which is located in the Hyōgo Prefecture of Japan. The castle is regarded as the finest surviving example of prototypical Japanese castle architecture, comprising a network of 83 rooms with advanced defensive systems from the feudal period. The castle is frequently known as Hakuro-jō or Shirasagi-jō ("White Egret Castle" or "White Heron Castle") because of its brilliant white exterior and supposed resemblance to a bird taking flight.
                 </span></li>
             </ul>
         </aside>
@@ -104,8 +103,7 @@
         <button></button>
 </div>
 </div>
-<iframe src="https://www.google.com/maps/embed?pb=!4v1617040560772!6m8!1m7!1sCAoSLEFGMVFpcE55dkp5VnkxZVhCZ2pUOEtHN3ZkeWFLX3FqQm9JNV9qdzJaUGpr!2m2!1d35.1528028!2d129.1283445!3f346.36347684708704!4f2.270079147204541!5f0.7820865974627469" width="1035" height="735" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!4v1618860668931!6m8!1m7!1sCAoSLEFGMVFpcFBvMkNKTzdOa1dud21NdXlDWnJZM0d4cFRpbDFMazFzNzhSZWVf!2m2!1d34.839449!2d134.6939047!3f11.22629674040498!4f19.36042567471118!5f0.7820865974627469" width="1035" height="735" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 </div>
 </body>
 </html>
-
