--- a/japan_landmark/sen.html
+++ b/japan_landmark/sen.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../logo.png" rel="icon" />
-    <title>Gwangan Bridge</title>
+    <title>Senso-ji</title>
     <link href="../css/layout.css" rel="stylesheet" type="text/css" />
 
 
@@ -84,19 +84,18 @@
 <div id="wrap">
     <div id="map_wrap">
     <div>
-        <div id="back"><a href="../korea.html"><img src="../arrow.png" alt="" /></a></div>
+        <div id="back"><a href="../japan.html"><img src="../arrow.png" alt="" /></a></div>
         <div id="landmark_name">
-            <h1>Gwangan Bridge</h1>
+            <h1>Senso-ji</h1>
         </div>
     </div>
 
 <div id="aside_wrap">
         <aside >
             <ul>
-                <li><p>Gwangan Bridge</p></li>
-                <li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3262.358531432637!2d129.1278430508525!3d35.14767816655877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3568ed398bb5ba9b%3A0x6729727408f74eb0!2sGwangan%20Bridge!5e0!3m2!1sen!2skr!4v1618859560939!5m2!1sen!2skr" width="280" height="280" style="border:0;" allowfullscreen="" loading="lazy"></iframe></li>
-                <li><span>The Gwangan Bridge or Diamond Bridge is a suspensionf bridge located in Busan, South Korea. It connects Haeundae-gu to Suyeong-gu. The road surface is about 6,500 meters long, with the bridge as a whole spanning 7,420 meters. It is the second longest bridge in the country after the Incheon Bridge.
-                            Construction began in 1994 and concluded in December 2002, with a total cost of 789.9 billion won. The bridge opened temporarily in September and October 2002 for the 2002 Asian Games. However, it was not officially opened until January, 2003.
+                <li><p>Senso-ji</p></li>
+                <li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3239.4804402941077!2d139.7964446736107!3d35.71440108876013!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188ec1a4463df1%3A0x6c0d289a8292810d!2zU2Vuc8WNLWpp!5e0!3m2!1sen!2skr!4v1618860335201!5m2!1sen!2skr" width="280" height="280" style="border:0;" allowfullscreen="" loading="lazy"></iframe></li>
+                <li><span>Senso-ji is an ancient Buddhist temple located in Asakusa, Tokyo, Japan. It is Tokyo's oldest temple, and one of its most significant. Formerly associated with the Tendai sect of Buddhism, it became independent after World War II. Adjacent to the temple is a five-story pagoda, the Asakusa Shinto shrine, as well as many shops with traditional goods in the Nakamise-dōri.
                 </span></li>
             </ul>
         </aside>
@@ -104,8 +103,7 @@
         <button></button>
 </div>
 </div>
-<iframe src="https://www.google.com/maps/embed?pb=!4v1617040560772!6m8!1m7!1sCAoSLEFGMVFpcE55dkp5VnkxZVhCZ2pUOEtHN3ZkeWFLX3FqQm9JNV9qdzJaUGpr!2m2!1d35.1528028!2d129.1283445!3f346.36347684708704!4f2.270079147204541!5f0.7820865974627469" width="1035" height="735" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+<iframe src="https://www.google.com/maps/embed?pb=!4v1618860113820!6m8!1m7!1sCAoSLEFGMVFpcE90b0JKNU0tY3Z2dlBVbmFnb0pNT0k2UVNDYkJTT0RhZUp1THRy!2m2!1d35.71440108876013!2d139.7964446736107!3f48.98171956017314!4f5.194029683661427!5f0.7820865974627469" width="1035" height="735" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 </div>
 </body>
 </html>
-
