--- a/uk.html
+++ b/uk.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="logo.png" rel="icon" />
-    <title>United States of America</title>
+    <title>United Kingdom</title>
     <link href="css/layout.css" rel="stylesheet" type="text/css" />
     
 </head>
@@ -16,7 +16,7 @@
          <div id="header">
             <div id="back"><a href="home2.html"><img src="arrow.png" alt="" /></a></div>
             <div id="title">
-                <h1>United States of America</h1>
+                <h1>United Kingdom</h1>
             </div>
         </div>
         <!-- header -->
@@ -26,12 +26,12 @@
             <div class="con_2">
                 <ul class="clearfix">
                     <li>
-                        <img src="flag/usa.svg" alt="" />
+                        <img src="flag/uk.png" alt="" />
                     </li>
                      
                     <li>
                         <p class="explain_box">
-                            The United States of America (USA), commonly known as the United States (U.S. or US) or America, is a country primarily located in North America. It consists of 50 states, a federal district, five major self-governing territories, 326 Indian reservations, and some minor possessions. At 3.8 million square miles (9.8 million square kilometers), it is the world's third- or fourth-largest country by total area. With a population of more than 328 million people, it is the third most populous country in the world. The national capital is Washington, D.C., and the most populous city is New York City.
+                            The United Kingdom of Great Britain and Northern Ireland, commonly known as the United Kingdom (UK) or Britain, is a sovereign country in north-western Europe, off the north-­western coast of the European mainland. The United Kingdom includes the island of Great Britain, the north-­eastern part of the island of Ireland, and many smaller islands within the British Isles. Northern Ireland shares a land border with the Republic of Ireland. Otherwise, the United Kingdom is surrounded by the Atlantic Ocean, with the North Sea to the east, the English Channel to the south and the Celtic Sea to the south-west, giving it the 12th-longest coastline in the world. The Irish Sea separates Great Britain and Ireland. The total area of the United Kingdom is 94,000 square miles 
                         </p>
                     </li>
                 </ul>
@@ -48,42 +48,42 @@
                 <ul class="clearfix">
                     <li>
                         <figure class="snip1361">
-                            <img src="usa_landmark/picture/1.jpeg" alt="" />
+                            <img src="uk_landmark/tb.jpeg" alt="" />
                             <figcaption>
-                              <h3>Statue of Liberty</h3>
+                              <h3>Tower Bridge</h3>
                               <p>Click and go on a trip</p>
                             </figcaption>
-                            <a href="usa_landmark/liberty.html"></a>
+                            <a href="uk_landmark/tb.html"></a>
                           </figure>
                     </li>
                     <li>
                         <figure class="snip1361">
-                            <img src="usa_landmark/picture/2.jpg" alt="" />
+                            <img src="uk_landmark/tbm.jpeg" alt="" />
                             <figcaption>
-                              <h3>Golden Gate Bridge</h3>
+                              <h3>The British Museum</h3>
                               <p>Click and go on a trip</p>
                             </figcaption>
-                            <a href="usa_landmark/ggb.html"></a>
+                            <a href="uk_landmark/tbm.html"></a>
                           </figure>
                     </li>
                     <li>
                         <figure class="snip1361">
-                            <img src="usa_landmark/picture/3.jpeg" alt="" />
+                            <img src="uk_landmark/sh.jpeg" alt="" />
                             <figcaption>
-                              <h3>Licoln Memorial</h3>
+                              <h3>Stonehenge</h3>
                               <p>Click and go on a trip</p>
                             </figcaption>
-                            <a href="usa_landmark/lm.html"></a>
+                            <a href="uk_landmark/sh.html"></a>
                           </figure>
                     </li>
                     <li>
                         <figure class="snip1361">
-                            <img src="usa_landmark/picture/4.jpg" alt="" />
+                            <img src="uk_landmark/wwc.jpeg" alt="" />
                             <figcaption>
-                              <h3>Hollywood Sign</h3>
+                              <h3>Warwick Castle</h3>
                               <p>Click and go on a trip</p>
                             </figcaption>
-                            <a href="usa_landmark/hollywood.html"></a>
+                            <a href="uk_landmark/wwc.html"></a>
                           </figure>
                     </li>
                 </ul>
