--- a/uk_landmark/sh.html
+++ b/uk_landmark/sh.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../logo.png" rel="icon" />
-    <title>Gwangan Bridge</title>
+    <title>Stonehenge</title>
     <link href="../css/layout.css" rel="stylesheet" type="text/css" />
-
 
     <style>
         *{margin:0; padding:0;}
@@ -40,7 +39,7 @@
                 margin-left: 10px;
                 display: block;
                 text-align: center;
-                font-size: 15px;
+                font-size: 14px;
                 line-height: 20px;}
 
         button{width:52px;
@@ -81,31 +80,31 @@
     </script>
 </head>
 <body>
-<div id="wrap">
-    <div id="map_wrap">
-    <div>
-        <div id="back"><a href="../korea.html"><img src="../arrow.png" alt="" /></a></div>
-        <div id="landmark_name">
-            <h1>Gwangan Bridge</h1>
+    <body>
+        <div id="wrap">
+            <div id="map_wrap">
+            <div>
+                <div id="back"><a href="../uk.html"><img src="../arrow.png" alt="" /></a></div>
+                <div id="landmark_name">
+                    <h1>Stonehenge</h1>
+                </div>
+            </div>
+
+        <div id="aside_wrap">
+            <aside >
+                <ul>
+                    <li><p>Stonehenge</p></li>
+                    <li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2501.181260959622!2d-1.826215!3d51.17888199999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4873e63b850af611%3A0x979170e2bcd3d2dd!2sStonehenge!5e0!3m2!1sen!2skr!4v1618863146953!5m2!1sen!2skr" width="280" height="280" style="border:0;" allowfullscreen="" loading="lazy"></iframe></li>
+                    <li><span>Stonehenge is a prehistoric monument on Salisbury Plain in Wiltshire, England, two miles (3 km) west of Amesbury. It consists of an outer ring of vertical Sarsen standing stones, each around 13 feet (4.0 m) high, seven feet (2.1 m) wide, and weighing around 25 tons, topped by connecting horizontal lintel stones. Inside is a ring of smaller bluestones. Inside these are free-standing trilithons, two bulkier vertical Sarsens joined by one lintel. The whole monument, now ruinous, is oriented towards the sunrise on the summer solstice. The stones are set within earthworks in the middle of the most dense complex of Neolithic and Bronze Age monuments in England, including several hundred tumuli (burial mounds).
+                    </span></li>
+                </ul>
+            </aside>
+
+            <button></button>
         </div>
-    </div>
-
-<div id="aside_wrap">
-        <aside >
-            <ul>
-                <li><p>Gwangan Bridge</p></li>
-                <li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3262.358531432637!2d129.1278430508525!3d35.14767816655877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3568ed398bb5ba9b%3A0x6729727408f74eb0!2sGwangan%20Bridge!5e0!3m2!1sen!2skr!4v1618859560939!5m2!1sen!2skr" width="280" height="280" style="border:0;" allowfullscreen="" loading="lazy"></iframe></li>
-                <li><span>The Gwangan Bridge or Diamond Bridge is a suspensionf bridge located in Busan, South Korea. It connects Haeundae-gu to Suyeong-gu. The road surface is about 6,500 meters long, with the bridge as a whole spanning 7,420 meters. It is the second longest bridge in the country after the Incheon Bridge.
-                            Construction began in 1994 and concluded in December 2002, with a total cost of 789.9 billion won. The bridge opened temporarily in September and October 2002 for the 2002 Asian Games. However, it was not officially opened until January, 2003.
-                </span></li>
-            </ul>
-        </aside>
-
-        <button></button>
-</div>
-</div>
-<iframe src="https://www.google.com/maps/embed?pb=!4v1617040560772!6m8!1m7!1sCAoSLEFGMVFpcE55dkp5VnkxZVhCZ2pUOEtHN3ZkeWFLX3FqQm9JNV9qdzJaUGpr!2m2!1d35.1528028!2d129.1283445!3f346.36347684708704!4f2.270079147204541!5f0.7820865974627469" width="1035" height="735" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-</div>
+        </div>
+        
+        <iframe src="https://www.google.com/maps/embed?pb=!4v1618863092421!6m8!1m7!1sCAoSLEFGMVFpcE11dE92bXlUcXdmSzVzdTNfUktSekJGaklicHIxRkk2NEtFS25a!2m2!1d51.17888199999999!2d-1.826215!3f153.1381819372147!4f24.168929137871174!5f0.7820865974627469" width="1035" height="735" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
 </body>
 </html>
-
