--- a/uk_landmark/tbm.html
+++ b/uk_landmark/tbm.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../logo.png" rel="icon" />
-    <title>Gwangan Bridge</title>
+    <title>The British Museum</title>
     <link href="../css/layout.css" rel="stylesheet" type="text/css" />
-
 
     <style>
         *{margin:0; padding:0;}
@@ -81,31 +80,31 @@
     </script>
 </head>
 <body>
-<div id="wrap">
-    <div id="map_wrap">
-    <div>
-        <div id="back"><a href="../korea.html"><img src="../arrow.png" alt="" /></a></div>
-        <div id="landmark_name">
-            <h1>Gwangan Bridge</h1>
+    <body>
+        <div id="wrap">
+            <div id="map_wrap">
+            <div>
+                <div id="back"><a href="../uk.html"><img src="../arrow.png" alt="" /></a></div>
+                <div id="landmark_name">
+                    <h1>The British Museum</h1>
+                </div>
+            </div>
+
+        <div id="aside_wrap">
+            <aside >
+                <ul>
+                    <li><p>The British Museum</p></li>
+                    <li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2482.666316964033!2d-0.126922774913595!3d51.51933754235934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48761b323093d307%3A0x2fb199016d5642a7!2sThe%20British%20Museum!5e0!3m2!1sen!2skr!4v1618862837608!5m2!1sen!2skr" width="280" height="280" style="border:0;" allowfullscreen="" loading="lazy"></iframe></li>
+                    <li><span>The British Museum, in the Bloomsbury area of London, England, is a public institution dedicated to human history, art and culture. Its permanent collection of some eight million works is among the largest and most comprehensive in existence, having been widely collected during the era of the British Empire. It documents the story of human culture from its beginnings to the present. It was the first public national museum in the world.
+                    </span></li>
+                </ul>
+            </aside>
+
+            <button></button>
         </div>
-    </div>
-
-<div id="aside_wrap">
-        <aside >
-            <ul>
-                <li><p>Gwangan Bridge</p></li>
-                <li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3262.358531432637!2d129.1278430508525!3d35.14767816655877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3568ed398bb5ba9b%3A0x6729727408f74eb0!2sGwangan%20Bridge!5e0!3m2!1sen!2skr!4v1618859560939!5m2!1sen!2skr" width="280" height="280" style="border:0;" allowfullscreen="" loading="lazy"></iframe></li>
-                <li><span>The Gwangan Bridge or Diamond Bridge is a suspensionf bridge located in Busan, South Korea. It connects Haeundae-gu to Suyeong-gu. The road surface is about 6,500 meters long, with the bridge as a whole spanning 7,420 meters. It is the second longest bridge in the country after the Incheon Bridge.
-                            Construction began in 1994 and concluded in December 2002, with a total cost of 789.9 billion won. The bridge opened temporarily in September and October 2002 for the 2002 Asian Games. However, it was not officially opened until January, 2003.
-                </span></li>
-            </ul>
-        </aside>
-
-        <button></button>
-</div>
-</div>
-<iframe src="https://www.google.com/maps/embed?pb=!4v1617040560772!6m8!1m7!1sCAoSLEFGMVFpcE55dkp5VnkxZVhCZ2pUOEtHN3ZkeWFLX3FqQm9JNV9qdzJaUGpr!2m2!1d35.1528028!2d129.1283445!3f346.36347684708704!4f2.270079147204541!5f0.7820865974627469" width="1035" height="735" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-</div>
+        </div>
+        
+        <iframe src="https://www.google.com/maps/embed?pb=!4v1618862810036!6m8!1m7!1sCAoSLEFGMVFpcE1Na1NCYjh3UkQyTXlHdWFHcmtQQ1VRanNaWER2MHZxbllyTWhZ!2m2!1d51.51933754235934!2d-0.126922774913595!3f15.887508305453025!4f13.673985222348193!5f0.7820865974627469" width="1035" height="735" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
 </body>
 </html>
-
