--- a/uk_landmark/wwc.html
+++ b/uk_landmark/wwc.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../logo.png" rel="icon" />
-    <title>Gwangan Bridge</title>
+    <title>Warwick Castle</title>
     <link href="../css/layout.css" rel="stylesheet" type="text/css" />
-
 
     <style>
         *{margin:0; padding:0;}
@@ -40,7 +39,7 @@
                 margin-left: 10px;
                 display: block;
                 text-align: center;
-                font-size: 15px;
+                font-size: 14px;
                 line-height: 20px;}
 
         button{width:52px;
@@ -81,31 +80,31 @@
     </script>
 </head>
 <body>
-<div id="wrap">
-    <div id="map_wrap">
-    <div>
-        <div id="back"><a href="../korea.html"><img src="../arrow.png" alt="" /></a></div>
-        <div id="landmark_name">
-            <h1>Gwangan Bridge</h1>
+    <body>
+        <div id="wrap">
+            <div id="map_wrap">
+            <div>
+                <div id="back"><a href="../uk.html"><img src="../arrow.png" alt="" /></a></div>
+                <div id="landmark_name">
+                    <h1>Warwick Castle</h1>
+                </div>
+            </div>
+
+        <div id="aside_wrap">
+            <aside >
+                <ul>
+                    <li><p>Warwick Castle</p></li>
+                    <li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9764.007485369644!2d-1.585228!3d52.279668!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4870cb4441162143%3A0x2959a3d7dd5df385!2sWarwick%20Castle!5e0!3m2!1sen!2skr!4v1618863373103!5m2!1sen!2skr" width="280" height="280" style="border:0;" allowfullscreen="" loading="lazy"></iframe></li>
+                    <li><span>Warwick Castle is a medieval castle developed from a wooden fort, originally built by William the Conqueror during 1068. Warwick is the county town of Warwickshire, England, situated on a meander of the River Avon. The original wooden motte-and-bailey castle was rebuilt in stone during the 12th century. During the Hundred Years War, the facade opposite the town was refortified, resulting in one of the most recognisable examples of 14th-century military architecture. It was used as a stronghold until the early 17th century, when it was granted to Sir Fulke Greville by James I in 1604. Greville converted it to a country house, and it was owned by the Greville family (who became Earls of Warwick in 1759) until 1978, when it was bought by the Tussauds Group.
+                    </span></li>
+                </ul>
+            </aside>
+
+            <button></button>
         </div>
-    </div>
-
-<div id="aside_wrap">
-        <aside >
-            <ul>
-                <li><p>Gwangan Bridge</p></li>
-                <li><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3262.358531432637!2d129.1278430508525!3d35.14767816655877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3568ed398bb5ba9b%3A0x6729727408f74eb0!2sGwangan%20Bridge!5e0!3m2!1sen!2skr!4v1618859560939!5m2!1sen!2skr" width="280" height="280" style="border:0;" allowfullscreen="" loading="lazy"></iframe></li>
-                <li><span>The Gwangan Bridge or Diamond Bridge is a suspensionf bridge located in Busan, South Korea. It connects Haeundae-gu to Suyeong-gu. The road surface is about 6,500 meters long, with the bridge as a whole spanning 7,420 meters. It is the second longest bridge in the country after the Incheon Bridge.
-                            Construction began in 1994 and concluded in December 2002, with a total cost of 789.9 billion won. The bridge opened temporarily in September and October 2002 for the 2002 Asian Games. However, it was not officially opened until January, 2003.
-                </span></li>
-            </ul>
-        </aside>
-
-        <button></button>
-</div>
-</div>
-<iframe src="https://www.google.com/maps/embed?pb=!4v1617040560772!6m8!1m7!1sCAoSLEFGMVFpcE55dkp5VnkxZVhCZ2pUOEtHN3ZkeWFLX3FqQm9JNV9qdzJaUGpr!2m2!1d35.1528028!2d129.1283445!3f346.36347684708704!4f2.270079147204541!5f0.7820865974627469" width="1035" height="735" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-</div>
+        </div>
+        
+        <iframe src="https://www.google.com/maps/embed?pb=!4v1618863351303!6m8!1m7!1sCAoSLEFGMVFpcFBoY3dYSmcwM1lVRV9ISF80SDY0WC1CRDV5cWNHT1R1S2hDME9k!2m2!1d52.279668!2d-1.585228!3f67.32525654349074!4f18.902774624340296!5f0.7820865974627469" width="1035" height="735" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
 </body>
 </html>
-
