--- a/Senior/home2.html
+++ b/Senior/home2.html
@@ -37,22 +37,22 @@
                     <h3>Travel List</h3>
                     <ul class="clearfix">
                         <li>
-                            <a href="korea.html">
+                            <a href="countries/korea.html">
                                 <span></span>
                             </a>
                         </li>
                         <li>
-                            <a href="usa.html">
+                            <a href="countries/usa.html">
                                 <span></span>
                             </a>
                         </li>
                         <li>
-                            <a href="japan.html">
+                            <a href="countries/japan.html">
                                 <span></span>
                             </a>
                         </li>
                         <li>
-                            <a href="uk.html">
+                            <a href="countries/uk.html">
                                 <span></span>
                             </a>
                         </li>
